Added new field for user and enemy

--- a/FrontEnd/src/Components/Button/Button.scss
+++ b/FrontEnd/src/Components/Button/Button.scss
@@ -1,9 +1,10 @@
 // Button
 
-.commonButton, .connectInput {
+.commonButton {
   cursor: pointer;
   padding: 3%;
   color: black;
+  background-color: bisque;
   font-size: 130%;
   margin-bottom: 5%;
   border: none;
