--- a/FrontEnd/src/Components/Connect/Connect.scss
+++ b/FrontEnd/src/Components/Connect/Connect.scss
@@ -7,6 +7,7 @@
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: lighter;
+  font-size: 2em;
   color: black;
   text-align: center;
 }
@@ -28,8 +29,8 @@
   background-color: bisque;
   margin-left: 3%;
   width: 100%;
-  height: 35px;
-  font-size: 130%;
+  height: 7vh;
+  font-size: 1.5em;
   border: none;
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -41,7 +42,7 @@
 }
 
 .connectInput{
-  height: 25px;
+  height: 5vh;
   width: 96%;
   margin-left: 3%;
   margin-bottom: 5%;
