--- a/FrontEnd/src/Components/FieldsGames/GameField.scss
+++ b/FrontEnd/src/Components/FieldsGames/GameField.scss
@@ -4,18 +4,17 @@
   flex-direction:row;
   justify-content:flex-start;
   align-items:stretch;
-  margin-top: -3%;
 
   .captionField{
     text-align: center;
   }
 
   .fieldUser{
-    margin-left: 15%;
+    margin-left: 10%;
   }
 
   .fieldEnemy{
-    margin-left: 15%;
+    margin-left: 10%;
   }
 
 }
@@ -23,4 +22,8 @@
 .fieldNotActive{
   opacity: 0.3;
   border: 3px solid red;
+}
+
+.gameIsOver{
+  opacity: 0.5;
 }
