--- a/FrontEnd/src/Components/Connect/Connect.scss
+++ b/FrontEnd/src/Components/Connect/Connect.scss
@@ -1,47 +1,41 @@
-.connectCaption{
+.Connect-Caption {
   width: 100%;
   margin-left: 3%;
   margin-bottom: 3%;
   margin-top: 3%;
   text-decoration: none !important;
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-weight: lighter;
   font-size: 2em;
   color: black;
   text-align: center;
-}
-.closeButton{
-  cursor: pointer;
-  margin-left: 93%;
-  color: black;
-  background-color: bisque;
-  font-size: 130%;
-  border: none;
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: lighter;
 }
+.Connect-CloseButton {
+  cursor: pointer;
+  margin-left: 93%;
+  color: black;
+  background-color: white;
+  font-size: 130%;
+  border: 1px solid black;
 
-.enterButton{
+}
+
+.Connect-EnterButton {
   cursor: pointer;
   color: black;
-  background-color: bisque;
+  background-color: white;
   margin-left: 3%;
   width: 100%;
   height: 7vh;
   font-size: 1.5em;
-  border: none;
+  border: 1px solid black;
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: lighter;
-  a{
-    text-decoration: none;
-    color: black;
-  }
 }
 
-.connectInput{
+.Connect-Input{
   height: 5vh;
   width: 96%;
   margin-left: 3%;
